# jsk_aerial_robot_dev

./: .gitmodules  .pre-commit-config.yaml
aerial_robot_planning/: CMakeLists.txt  package.xml  setup.py
aerial_robot_planning/config/: Smach.yaml
aerial_robot_planning/docs/: trajs.puml
aerial_robot_planning/plugins/: rqt_plugins.xml
aerial_robot_planning/scripts/: mpc_smach_node.py  pub_mpc_base.py  pub_mpc_joint_traj.py  pub_mpc_pred_xu.py  trajs.py  util.py
aerial_robot_planning/scripts/hand_control/: hand_ctrl_modes.py
aerial_robot_planning/scripts/teleoperation/: glove_control_pub.py  sub_pos_objects.py  teleop_modes.py  teleop_smach.py  visual_fb_mode.py
aerial_robot_planning/scripts/tilt_qd_csv_trajs/: README.md  fov1_v=1.csv  fov1_v=2.csv  fov1_v=5.csv  fov2_v=5.csv  fov3_v=5.csv  fov4_v=5.csv  fov5_v=5.csv  fov6_v=5.csv  fov7_v=5.csv  ipopt_fov1_v=1.csv  ipopt_fov1_v=2.csv  ipopt_fov1_v=5.csv  ipopt_fov2_v=5.csv  ipopt_fov3_v=5.csv  ipopt_fov4_v=5.csv  ipopt_fov5_v=5.csv  ipopt_fov5_v=5_N10.csv  ipopt_fov5_v=5_N8.csv  ipopt_fov6_v=5.csv  ipopt_fov7_v=5.csv  ipopt_points_v=1.csv  ipopt_points_v=2.csv  ipopt_points_v=5.csv  points_v=1.csv  points_v=2.csv  points_v=5.csv  scvx_patraj_exp.csv  scvx_patraj_gazebo.csv  scvx_patraj_gazebo_v=5.csv  scvx_traj_max_v=1_1.csv  scvx_traj_max_v=2_1.csv  scvx_traj_max_v=2_2.csv  scvx_traj_max_v=2_3.csv  scvx_traj_max_v=5_0.csv  scvx_traj_max_v=5_1.csv  scvx_traj_max_v=5_2.csv  scvx_traj_max_v=5_3.csv
aerial_robot_planning/src/aerial_robot_planning/: pub_mpc_base.py  pub_mpc_joint_traj.py  pub_mpc_pred_xu.py  (+3 more)
(+190 files in other folders)
