<?xml version="1.0"?>
<package format="2">
  <name>aerial_robot_planning</name>
  <version>0.0.0</version>
  <description>The aerial_robot_planning package</description>

  <maintainer email="jinjie-li@dragon.t.u-tokyo.ac.jp">li-jinjie</maintainer>

  <license>GPLv3</license>

  <!-- Build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>rosparam</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>python_qt_binding</build_depend>

  <!-- Run-time dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosparam</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>

  <!-- Export rqt plugin -->
  <export>
    <rqt_gui plugin="${prefix}/plugins/rqt_plugins.xml"/>
  </export>
</package>
